# bayesian_non_parametrics

./: README.md  environment.yml  id_model.md  pyproject.toml  ref.bib
artefact/reales/models/: v2.0.0_employe_dataset_001_20251223_005436_model.pkl  v2.0.0_employe_dataset_001_20251223_005436_trace.pkl  v2.0.0_employe_dataset_001_20251223_010529_model.pkl  v2.0.0_employe_dataset_001_20251223_010529_trace.pkl  v2.0.0_employe_dataset_001_20251223_011704_model.pkl  v2.0.0_employe_dataset_001_20251223_011704_trace.pkl  v2.0.0_employe_dataset_002_20251223_011030_model.pkl  v2.0.0_employe_dataset_002_20251223_011030_trace.pkl  v2.0.0_employe_dataset_002_20251223_012341_model.pkl  v2.0.0_employe_dataset_002_20251223_012341_trace.pkl
artefact/simulaciones/models/: v2.0.0_kernel_laplace_004_20251223_000818_model.pkl  v2.0.0_kernel_laplace_004_20251223_000818_trace.pkl  v2.0.0_kernel_laplace_005_20251223_001302_model.pkl  v2.0.0_kernel_laplace_005_20251223_001302_trace.pkl  v2.0.0_kernel_laplace_006_20251223_001416_model.pkl  v2.0.0_kernel_laplace_006_20251223_001416_trace.pkl  v2.0.0_kernel_normal_001_20251222_235558_model.pkl  v2.0.0_kernel_normal_001_20251222_235558_trace.pkl  v2.0.0_kernel_normal_002_20251222_235956_model.pkl  v2.0.0_kernel_normal_002_20251222_235956_trace.pkl  v2.0.0_kernel_normal_003_20251223_000616_model.pkl  v2.0.0_kernel_normal_003_20251223_000616_trace.pkl
cookiecutter-setup/model_dpm_cookie/: Makefile  README.md
data/reales/: Concrete_Data.xls
data/reales/concrete_Data_20251227_213314/: data_test.csv  data_train.csv
data/simulaciones/: kernel_laplace_004.csv  kernel_laplace_005.csv  kernel_laplace_006.csv  kernel_normal_001.csv  kernel_normal_002.csv  kernel_normal_003.csv
data/simulaciones/comparacion_modelos_001_20251225_214401/: data_test.csv  data_train.csv
data/simulaciones/comparacion_modelos_002_20251228_155053/: data_test.csv  data_train.csv
data/simulaciones/lsbp_001_exp_02_20251225_132048/: _data.csv
data/simulaciones/model_lsbp_001/: _data.csv
data/simulaciones/psbp_001_exp_01_20251226_205106/: _data.csv
data/simulaciones/psbp_001_exp_03_20251230_015941/: _data.csv
data/simulaciones/psbp_001_exp_04_20251226_210318/: _data.csv
environments/: environment.yml
model_ddp/: README.md  dataset.py  environment.yml  features.py  plots.py  pyproject.toml
model_ddp/fit/: metrics.py
model_ddp/graphics/: __init__.py  plots_aplication.py  plots_regression.py  plots_traces.py
model_ddp/model_ddp/modeling/: train.py
model_ddp/modeling/: predict.py
model_ddp/models/: LSBP_normal_v1.py
model_ddp/models/DDPL2_v1/: DDPL2_v1.py  DDPL2_v1_p.py  __init__.py
model_ddp/models/DDPL2_v1/cpp/: CMakeLists.txt  bindings.cpp  lsbp_core.cpp  lsbp_core.hpp
model_ddp/models/LSBP_laplace_v1/: LSBP_laplace_v1.py  __init__.py
model_ddp/models/LSBP_laplace_v1/cpp/: CMakeLists.txt  lsbp_laplace_bindings.cpp  lsbp_laplace_core.cpp  lsbp_laplace_core.hpp
model_ddp/models/LSBP_normal_v2/: LSBP_normal_v2.py  __init__.py
model_ddp/models/LSBP_normal_v2/cpp/: CMakeLists.txt  bindings.cpp  lsbp_core.cpp  lsbp_core.hpp
model_ddp/models/LSBP_normal_v3/: LSBP_normal_v3.py  __init__.py  testeo.ipynb
model_ddp/models/LSBP_normal_v3/cpp/: bindings.cpp  lsbp_core.cpp  lsbp_core.hpp
model_ddp/models/PSBP_normal_v1/: PSBP_normal_v1.py  __init__.py
model_ddp/models/PSBP_normal_v1/cpp/: bindings.cpp  psbp_core.cpp  psbp_core.hpp
model_ddp/models/PSBP_normal_v2/: PSBP_normal_v2.py  __init__.py
model_ddp/models/PSBP_normal_v2/cpp/: CMakeLists.txt  bindings.cpp  psbp_core.cpp  psbp_core.hpp
model_ddp/models/PSBP_normal_v3/: PSBP_normal_v3.py  __init__.py
model_ddp/models/PSBP_normal_v3/cpp/: CMakeLists.txt  bindings.cpp  psbp_core.cpp  psbp_core.hpp
model_ddp/pipelines/: data_separacion.py
model_ddp/simulations/: gaussian_simulator.py
model_ddp/utils/: sistem_fun.py
model_dpm/dirichlet_mixture_process/models/: kernel_normal.py
model_dpm/dirichlet_mixture_process/simulations/: sim_mixture.py
model_dpm/environments/: environment.yml
model_dpm/graphics/: app_1.py  density.py  diagnostic.py
model_dpm/models/: kernel_laplace_v1.py  kernel_normal_v2.py
model_dpm/utils/: sistem_artefact.py  sistem_fun.py  sistem_regist.py
model_dpm_cookie/: environment.yml  pyproject.toml
model_dpm_cookie/model_dpm_cookie/: __init__.py  dataset.py  features.py  plots.py
model_times_series_fd/: Makefile  README.md  environment.yml  pyproject.toml
model_times_series_fd/model_times_series_fd/: __init__.py  dataset.py  features.py  plots.py
model_times_series_fd/model_times_series_fd/modeling/: predict.py  train.py
notebooks/reales/: concrete_data.ipynb  kernel_normal_001.ipynb  salarios_empleos.ipynb
notebooks/simulaciones/: comparacion_v1.ipynb  comparacion_v2.ipynb  kernel_laplace_004.ipynb  kernel_laplace_005.ipynb  kernel_laplace_006.ipynb  kernel_normal_001.ipynb  kernel_normal_002.ipynb  kernel_normal_003.ipynb  model_DDPL2_experimento_v1.ipynb  model_LSBP_experimento_v1.ipynb  model_LSBP_experimento_v2.ipynb  model_LSBP_v1.ipynb  model_PSBP_experimento_v1.ipynb
reports/reales/concrete_Data_20251227_213314/: metrics_lsbp_model_laplace.json  metrics_lsbp_model_normal.json  metrics_rf_model.json  metrics_xgb_model.json
reports/simulaciones/comparacion_modelos_001_20251225_214401/: metrics_lsbp_model_laplace.json  metrics_lsbp_model_normal.json  metrics_rf_model.json  metrics_xgb_model.json
reports/simulaciones/comparacion_modelos_002_20251228_155053/: metrics_lsbp_model_normal.json  metrics_rf_model.json  metrics_xgb_model.json
reports/simulaciones/lsbp_001_20251223_183659/: metrics.json  predictions.csv
reports/simulaciones/lsbp_001_exp_01_20251225_130442/: metrics.json  predictions.csv
reports/simulaciones/lsbp_001_exp_02_20251225_132048/: metrics.json  predictions.csv
reports/simulaciones/lsbp_001_exp_03_20251225_132710/: metrics.json  predictions.csv
reports/simulaciones/lsbp_001_exp_04_20251225_133915/: metrics.json  predictions.csv
versioning/: config.yaml  experiment_registry.md
(+33 files in other folders)
