[build-system]
requires = [
    "flit_core >=3.2,<4",
    "pybind11>=2.10",
    "cmake>=3.15",
]
build-backend = "flit_core.buildapi"

[project]
name = "model_ddp"
version = "0.1.0"
description = "Modelos de Procesos Dirichlet Dependientes"
authors = [
  { name = "Juan Ceballos", email = "juan.ceballos.g@usach.cl" },
]

readme = "README.md"
requires-python = ">=3.12.2"

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "plotly",
    "scikit-learn>=1.3",
    "statsmodels",
    "pyyaml>=6.0",
    "python-dotenv",
    "typer",
    "loguru",
    "tqdm>=4.65",
    "pybind11>=2.10",
    "xgboost>=2.0",
    "xlrd>=2.0.1",   
]

[project.optional-dependencies]
dev = [
    "ipython",
    "jupyterlab",
    "notebook",
    "ruff",
    "pytest",
]

[tool.ruff]
line-length = 99
src = ["model_ddp"]
include = ["pyproject.toml", "model_ddp/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["model_ddp"]
force-sort-within-sections = true