[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "model_times_series_fd"
version = "0.0.1"
description = "Aplicacion y uso de series de tiempo funcionales"
authors = [
  { name = "Juan Ceballos" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.12.2"


[tool.ruff]
line-length = 99
src = ["model_times_series_fd"]
include = ["pyproject.toml", "model_times_series_fd/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["model_times_series_fd"]
force-sort-within-sections = true

